--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,11 @@ services:
     command: sh -c "python manage.py migrate --no-input && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
-    env_file:
-      - ".env"
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DEBUG: "False"
+
     restart: always
     depends_on:
       - db
